--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   padding: 2% 5%;
+  background-color: #f5efef;
+  color: #360a0d;
 }
 
 .App * {
@@ -20,11 +22,11 @@ input[type="text"], input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
   outline: none;
-  border: 1px solid #ccc;
   font-size: 14px;
   line-height: 20px;
   align-self: center;
   height: 38px;
+  border: 2px solid #e97171;
 }
 
 .city {
@@ -64,19 +66,39 @@ input[type="text"], input[type="number"] {
   padding: 10px 10px 20px;
   margin-bottom: 10px;
   text-align: left;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  border: 1px solid #931a25;
+  border-radius: 2px;
   position: relative;
+  transition: border-width 0.3s linear;
+}
+
+.event:hover {
+  border-width: 10px;
 }
 
 .details-btn {
   position: absolute;
   right: 5px;
   bottom: 5px;
-  padding: 5px 8px;
   border-radius: 4px;
   outline: none;
   cursor: pointer;
+  box-shadow:inset 0px 1px 0px 0px #931a24;
+	background:linear-gradient(to bottom, #f0ddc8 5%, #ffca8e 100%);
+	background-color:#f0ddc8;
+	border:2px solid #931a24;
+	color:#360a0d;
+	font-family:Arial;
+	font-size:15px;
+	font-style:italic;
+	padding:9px 24px;
+	text-decoration:none;
+	text-shadow:0px 0px 0px #b23e35;
+}
+
+.details-btn:hover {
+  background:linear-gradient(to bottom, #ffca8e 5%, #f0ddc8 100%);
+	background-color:#ffca8e;
 }
 
 .name {
@@ -102,4 +124,12 @@ input[type="text"], input[type="number"] {
   margin: auto;
   margin-top: 10px;
   text-align: center;
+}
+
+@media only screen and (max-width: 576px) {
+  .event {
+    column-count: 1;
+    -moz-column-count: 1;
+    -webkit-column-count: 1;
+  }
 }
