--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 2% 5%;
   background-color: #f5efef;
-  color: #360a0d;
+  color: #151925;
 }
 
 .App * {
@@ -18,6 +18,16 @@ p {
   margin: 5px 0;
 }
 
+h1 {
+  color: #151925;
+}
+
+h3 {
+  color: #151925;
+  font-size: 20px;
+  font-weight: 600;
+}
+
 input[type="text"], input[type="number"] {
   padding: 8px 6px 8px 10px;
   border-radius: 4px;
@@ -26,7 +36,7 @@ input[type="text"], input[type="number"] {
   line-height: 20px;
   align-self: center;
   height: 38px;
-  border: 2px solid #e97171;
+  border: 2px solid #5a4c6c;
 }
 
 .city {
@@ -59,14 +69,14 @@ input[type="text"], input[type="number"] {
 
 
 .suggestions > li:hover {
-  background-color: #BCDCDB;
+  background-color: #f0ddc8;
 }
 
 .event {
   padding: 10px 10px 20px;
   margin-bottom: 10px;
-  text-align: left;
-  border: 1px solid #931a25;
+  text-align: center;
+  border: 1px solid #384464;
   border-radius: 2px;
   position: relative;
   transition: border-width 0.3s linear;
@@ -76,6 +86,11 @@ input[type="text"], input[type="number"] {
   border-width: 10px;
 }
 
+.chart {
+  display: inline-block;
+  margin: auto; 
+}
+
 .details-btn {
   position: absolute;
   right: 5px;
@@ -83,17 +98,17 @@ input[type="text"], input[type="number"] {
   border-radius: 4px;
   outline: none;
   cursor: pointer;
-  box-shadow:inset 0px 1px 0px 0px #931a24;
+  box-shadow:inset 0px 1px 0px 0px #384464;
 	background:linear-gradient(to bottom, #f0ddc8 5%, #ffca8e 100%);
 	background-color:#f0ddc8;
-	border:2px solid #931a24;
-	color:#360a0d;
+	border:2px solid #384464;
+	color:#151925;
 	font-family:Arial;
 	font-size:15px;
 	font-style:italic;
 	padding:9px 24px;
 	text-decoration:none;
-	text-shadow:0px 0px 0px #b23e35;
+	text-shadow:0px 0px 0px #5a4c6c;
 }
 
 .details-btn:hover {
@@ -102,7 +117,7 @@ input[type="text"], input[type="number"] {
 }
 
 .name {
-  font-size: 18px;
+  font-size: 30px;
   font-weight: 600;
 }
 
